fix jumpiness issue with differing sized elements

--- a/client/src/components/styles/Photo.css
+++ b/client/src/components/styles/Photo.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     height: 800px;
-    width: 460px;
     padding: 0 20px;
 }
 
